--- a/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_StateSpecs.rc
@@ -39,40 +39,40 @@ category: EXPORT
 #----------------------------------------------------------------------------------------
 #  VARIABLE                | DIMENSIONS    |          Additional Metadata
 #----------------------------------------------------------------------------------------
- NAME          | UNITS        | DIMS  | VLOC  | UNGRIDDED                      | LONG NAME
+ NAME          | UNITS        | DIMS  | VLOC  | UNGRIDDED                     | LONG NAME
 #----------------------------------------------------------------------------------------
- SSMASS        | kg kg-1      | xyz   | C     |                                | Sea Salt Mass Mixing Ratio
- SSMASS25      | kg kg-1      | xyz   | C     |                                | Sea Salt Mass Mixing Ratio of Particulate Matter < 2.5 microns (PM2.5)
- SSCONC        | kg m-3       | xyz   | C     |                                | Sea Salt Mass Concentration
- SSEXTCOEF     | m-1          | xyz   | C     | size(self%wavelengths_profile) | Sea Salt Extinction Coefficient
- SSEXTCOEFRH20 | m-1          | xyz   | C     | size(self%wavelengths_profile) | Sea Salt Extinction Coefficient - Fixed RH=20%
- SSEXTCOEFRH80 | m-1          | xyz   | C     | size(self%wavelengths_profile) | Sea Salt Extinction Coefficient - Fixed RH=80%
- SSSCACOEF     | m-1          | xyz   | C     | size(self%wavelengths_profile) | Sea Salt Scattering Coefficient
- SSSCACOEFRH20 | m-1          | xyz   | C     | size(self%wavelengths_profile) | Sea Salt Scattering Coefficient - Fixed RH=20%
- SSSCACOEFRH80 | m-1          | xyz   | C     | size(self%wavelengths_profile) | Sea Salt Scattering Coefficient - Fixed RH=80%
- SSBCKCOEF     | m-1 sr-1     | xyz   | C     | size(self%wavelengths_profile) | Sea Salt Backscatter Coefficient
-#............. | ............ | ..... | ..... | ............                   | ..................................
- SSEM          | kg m-2 s-1   | xy    | N     | self%nbins                     | Sea Salt Emission (Bin %d)
- SSSD          | kg m-2 s-1   | xy    | N     | self%nbins                     | Sea Salt Sedimentation (Bin %d)
- SSDP          | kg m-2 s-1   | xy    | N     | self%nbins                     | Sea Salt Dry Deposition (Bin %d)
- SSWT          | kg m-2 s-1   | xy    | N     | self%nbins                     | Sea Salt Wet Deposition (Bin %d)
- SSSV          | kg m-2 s-1   | xy    | N     | self%nbins                     | Sea Salt Convective Scavenging (Bin %d)
- SSSMASS       | kg m-3       | xy    | N     |                                | Sea Salt Surface Mass Concentration
- SSCMASS       | kg m-2       | xy    | N     |                                | Sea Salt Column Mass Density
- SSEXTTAU      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth
- SSSTEXTTAU    | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Stratospheric Aerosol Optical Thickness
- SSSCATAU      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth Due to Scattering
- SSSTSCATAU    | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Stratospheric Aerosol Optical Thickness Due to Scattering
- SSSMASS25     | kg m-3       | xy    | N     |                                | Sea Salt Surface Mass Concentration of Particulate Matter < 2.5 microns (PM2.5)
- SSCMASS25     | kg m-2       | xy    | N     |                                | Sea Salt Column Mass Density of Particulate Matter < 2.5 microns (PM2.5)
- SSEXTT25      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth from Particulate Matter < 2.5 microns (PM2.5)
- SSSCAT25      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth Due to Scattering from Particulate Matter < 2.5 microns (PM2.5)
- SSAERIDX      | 1            | xy    | N     |                                | Sea Salt TOMS UV Aerosol Index
- SSEXTTFM      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth from Particulate Matter < 1 micron (PM1.0)
- SSSCATFM      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth Due to Scattering from Particulate Matter < 1 micron (PM1.0)
- SSANGSTR      | 1            | xy    | N     |                                | Sea Salt Angstrom parameter [470-870 nm]
- SSFLUXU       | kg m-1 s-1   | xy    | N     |                                | Sea Salt column u-wind mass flux
- SSFLUXV       | kg m-1 s-1   | xy    | N     |                                | Sea Salt column v-wind mass flux
+ SSMASS        | kg kg-1      | xyz   | C     |                           | Sea Salt Mass Mixing Ratio
+ SSMASS25      | kg kg-1      | xyz   | C     |                           | Sea Salt Mass Mixing Ratio of Particulate Matter < 2.5 microns (PM2.5)
+ SSCONC        | kg m-3       | xyz   | C     |                           | Sea Salt Mass Concentration
+ SSEXTCOEF     | m-1          | xyz   | C     | ungrd_wavelengths_profile | Sea Salt Extinction Coefficient
+ SSEXTCOEFRH20 | m-1          | xyz   | C     | ungrd_wavelengths_profile | Sea Salt Extinction Coefficient - Fixed RH=20%
+ SSEXTCOEFRH80 | m-1          | xyz   | C     | ungrd_wavelengths_profile | Sea Salt Extinction Coefficient - Fixed RH=80%
+ SSSCACOEF     | m-1          | xyz   | C     | ungrd_wavelengths_profile | Sea Salt Scattering Coefficient
+ SSSCACOEFRH20 | m-1          | xyz   | C     | ungrd_wavelengths_profile | Sea Salt Scattering Coefficient - Fixed RH=20%
+ SSSCACOEFRH80 | m-1          | xyz   | C     | ungrd_wavelengths_profile | Sea Salt Scattering Coefficient - Fixed RH=80%
+ SSBCKCOEF     | m-1 sr-1     | xyz   | C     | ungrd_wavelengths_profile | Sea Salt Backscatter Coefficient
+#............. | ............ | ..... | ..... | ............              | ..................................
+ SSEM          | kg m-2 s-1   | xy    | N     | ungrd_nbins               | Sea Salt Emission (Bin %d)
+ SSSD          | kg m-2 s-1   | xy    | N     | ungrd_nbins               | Sea Salt Sedimentation (Bin %d)
+ SSDP          | kg m-2 s-1   | xy    | N     | ungrd_nbins               | Sea Salt Dry Deposition (Bin %d)
+ SSWT          | kg m-2 s-1   | xy    | N     | ungrd_nbins               | Sea Salt Wet Deposition (Bin %d)
+ SSSV          | kg m-2 s-1   | xy    | N     | ungrd_nbins               | Sea Salt Convective Scavenging (Bin %d)
+ SSSMASS       | kg m-3       | xy    | N     |                           | Sea Salt Surface Mass Concentration
+ SSCMASS       | kg m-2       | xy    | N     |                           | Sea Salt Column Mass Density
+ SSEXTTAU      | 1            | xy    | N     | ungrd_wavelengths_vertint | Sea Salt Aerosol Optical Depth
+ SSSTEXTTAU    | 1            | xy    | N     | ungrd_wavelengths_vertint | Sea Salt Stratospheric Aerosol Optical Thickness
+ SSSCATAU      | 1            | xy    | N     | ungrd_wavelengths_vertint | Sea Salt Aerosol Optical Depth Due to Scattering
+ SSSTSCATAU    | 1            | xy    | N     | ungrd_wavelengths_vertint | Sea Salt Stratospheric Aerosol Optical Thickness Due to Scattering
+ SSSMASS25     | kg m-3       | xy    | N     |                           | Sea Salt Surface Mass Concentration of Particulate Matter < 2.5 microns (PM2.5)
+ SSCMASS25     | kg m-2       | xy    | N     |                           | Sea Salt Column Mass Density of Particulate Matter < 2.5 microns (PM2.5)
+ SSEXTT25      | 1            | xy    | N     | ungrd_wavelengths_vertint | Sea Salt Aerosol Optical Depth from Particulate Matter < 2.5 microns (PM2.5)
+ SSSCAT25      | 1            | xy    | N     | ungrd_wavelengths_vertint | Sea Salt Aerosol Optical Depth Due to Scattering from Particulate Matter < 2.5 microns (PM2.5)
+ SSAERIDX      | 1            | xy    | N     |                           | Sea Salt TOMS UV Aerosol Index
+ SSEXTTFM      | 1            | xy    | N     | ungrd_wavelengths_vertint | Sea Salt Aerosol Optical Depth from Particulate Matter < 1 micron (PM1.0)
+ SSSCATFM      | 1            | xy    | N     | ungrd_wavelengths_vertint | Sea Salt Aerosol Optical Depth Due to Scattering from Particulate Matter < 1 micron (PM1.0)
+ SSANGSTR      | 1            | xy    | N     |                           | Sea Salt Angstrom parameter [470-870 nm]
+ SSFLUXU       | kg m-1 s-1   | xy    | N     |                           | Sea Salt column u-wind mass flux
+ SSFLUXV       | kg m-1 s-1   | xy    | N     |                           | Sea Salt column v-wind mass flux
 
 
 category: INTERNAL
@@ -81,8 +81,8 @@ category: INTERNAL
 #----------------------------------------------------------------------------------------
   NAME | UNITS | DIMS | VLOC | UNGRIDDED | RESTART | ADD2EXPORT | FRIENDLYTO | LONG NAME
 #----------------------------------------------------------------------------------------
- SS              |kg kg-1| xyz  | C    | self%nbins | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST | Sea Salt Mixing Ratio (bin %d)
- DEEP_LAKES_MASK |   1   | xy   | N    |            | MAPL_RestartSkip     | F |                           | Deep Lakes Mask
+ SS              |kg kg-1| xyz  | C    | ungrd_nbins | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST | Sea Salt Mixing Ratio (bin %d)
+ DEEP_LAKES_MASK |   1   | xy   | N    |             | MAPL_RestartSkip     | F |                           | Deep Lakes Mask
 
 #********************************************************
 #
